resources/quotes-pipeline-secure/sonarqube/02_sonardb-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
  name: sonardb
  namespace: sonarqube
  labels:
    app: sonarqube
    template: postgresql-persistent-template
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sonardb
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: sonardb
    spec:
      volumes:
        - name: sonardb-data
          persistentVolumeClaim:
            claimName: sonardb
      containers:
        - resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              memory: 1Gi
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c 'SELECT 1'
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: postgresql
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            privileged: false
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: sonardb-data
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
          image: 'image-registry.openshift-image-registry.svc:5000/openshift/postgresql'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
