resources/quotes-pipeline-secure/sonarqube/04_sonardb-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  name: sonardb
  namespace: sonarqube
  labels:
    app: sonarqube
    template: postgresql-persistent-template
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: sonardb
