resources/quotes-pipeline-secure/sonarqube/05_sonarqube-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  name: sonarqube
  namespace: sonarqube
  labels:
    app: sonarqube
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deploymentconfig: sonarqube
